resolving dark mode issue

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -17,7 +17,8 @@
 }
 
 body {
-  color: rgb(var(--foreground-rgb));
+  color : black;
+  /* color: rgb(var(--foreground-rgb)); */
   /* font-family: "Playfair Display", serif;
   font-optical-sizing: auto; */
   /* font-weight: 700; */
